# flint-and-pixels-3d

./: CMakeLists.txt  README.md  main.cpp
include/: config.h  math3d.h  mesh.h  renderer.h
src/: main.cpp  math3d.cpp  mesh.cpp  renderer.cpp
